cập nhật bản sửa lỗi các trang

--- a/src/components/body/comment/PostComment.css
+++ b/src/components/body/comment/PostComment.css
@@ -89,6 +89,11 @@
     text-align: center;
 }
 
+.id-comment:focus {
+    color: white;
+    background: #27363D ;
+}
+
 .id-comment:hover {
     text-decoration: none;
     color: white;
