--- a/src/components/body/detail-university/style/introduce.css
+++ b/src/components/body/detail-university/style/introduce.css
@@ -54,6 +54,8 @@
   color: #000000;
 }
 
+/**-----------------------*/
+
 .contact-intro {
   text-align: center;
   margin-top: 30px;
@@ -63,9 +65,17 @@
   font-size: 35px;
 }
 
+/* ----group contact-----*/
+
+.group-contact {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
 .img-contact {
   margin-top: 10px;
-  width: 440px;
+  margin-right: 10px;
+  width: 380px;
   height: 250px;
 }
 
@@ -96,7 +106,7 @@
 }
 
 .send-contact {
-  width: 30%;
+  width: 40%;
   height: 40px;
   border-radius: 10px;
   background: transparent
