--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -4,8 +4,8 @@
     background-image: url(/assets/signIn/bglogin.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 90px;
+    padding-bottom: 90px;
 }
 
 /* .title-SignUp {
@@ -23,8 +23,9 @@
 .main-signIn {
     /* background: rgba(255, 255, 255, .8); */
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9),  rgba(255, 255, 255, 0.9),  rgba(255, 255, 255, 0.9), rgba(61, 167, 61, 0.7));
-    width: auto;
+    width: 90%;
     height: auto;
+    margin: 0 auto;
     border-radius: 10px;
 }
 
@@ -78,7 +79,7 @@
     display: flex;
     align-items: center;
     background-color: #eff2f5;
-    padding: 15px 0px 15px 10px;
+    padding: 8px 0px 8px 10px;
     border-radius: 30px;
     box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 1);
 }
