--- a/src/components/body/new-post/style/main.css
+++ b/src/components/body/new-post/style/main.css
@@ -1,1 +1,66 @@
-/* Viết css vào đây nghe tml =)) */
+.new-post {
+    margin-top: 50px;
+    /* border: 1px solid black; */
+    justify-content: center;
+}
+
+.title-new-post {
+    text-align: center;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+.form-new-post {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+
+}
+
+.title-post {
+    width: 100%;
+    height: 45px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding-left: 15px;
+    outline: none;
+    font-size: 20px;
+    font-weight: 550;
+}
+
+.content-post {
+    margin-top: 20px;
+    width: 100%;
+    height: 40vh;
+    padding-left: 15px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 16px;
+}
+
+.tag-post {
+    width: 100%;
+    height: 45px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding-left: 15px;
+    outline: none;
+    font-size: 16px;
+    font-weight: 550;
+    margin-top: 20px;
+}
+
+.btn-new-post {
+    /* display: flex; */
+    text-align: center;
+    margin-top: 20px;
+    float: right;
+    background-color: #3c9e29;
+    color: white;
+    border: none;
+    width: 130px;
+    height: 35px;
+    outline: none;
+    border-radius: 8px;
+    font-weight: 500;
+}
