--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -1,12 +1,14 @@
 .SignUp {
     width: 100%;
     height: 100%;
-    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg);
+    background-image: url(/assets/signIn/bglogin.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    padding-top: 90px;
+    padding-bottom: 90px;
 }
 
-.title-SignUp {
+/* .title-SignUp {
     width: 40vw;
     font-size: 50px;
     text-align: left;
@@ -16,29 +18,43 @@
     align-items: center;
     margin-top: auto;
     margin-bottom: auto;
+} */
+
+.main-signIn {
+    /* background: rgba(255, 255, 255, .8); */
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9),  rgba(255, 255, 255, 0.9),  rgba(255, 255, 255, 0.9), rgba(61, 167, 61, 0.7));
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.img-signIn {
+    width: 45%;
+    height: 95%;
+    margin: 3% auto;
 }
 
 .form-SignUp {
     width: auto;
     height: auto;
-    background-color: #ffffff;
-    margin-top: 66px;
-    margin-bottom: 66px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 84px 10px 20px 10px;
+    /* background-color: #ffffff; */
+    margin-top: 10px ;
+    margin-right: 10px;
+    padding: 20px 10px 20px 10px;
     border-radius: 10px;
 }
 
 .form-SignUp>h2 {
-    color: #818A91;
-    font: normal normal bold 35px/47px Segoe UI;
+    color: #4faf57;
+    font-size: 40px;
+    font-weight: 700;
     text-align: center;
 }
 
 .form-group {
     width: 400px;
-    margin-top: 61px;
+    margin-top: 20px;
     text-align: left;
     padding-left: 20px;
     padding-right: 20px;
@@ -53,8 +69,8 @@
 .title-input {
     font-size: 16px;
     font-weight: 500;
-    color: #766776;
-    margin-top: 35px;
+    color: #359b50;
+    margin-top: 10px;
     margin-bottom: 3px;
     margin-left: 25px;
 }
@@ -63,10 +79,15 @@
     display: flex;
     align-items: center;
     background-color: #eff2f5;
-    padding: 15px 0px 15px 10px;
+    padding: 8px 0px 8px 10px;
     border-radius: 30px;
     box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 1);
 }
+
+.SignUp-input>svg:first-child {
+    margin-left: 15px;
+}
+
 
 .SignUp-input>input {
     border: none;
@@ -81,7 +102,7 @@
 
 .hidden-pass {
     text-align: right;
-    margin-left: 30%;
+    margin-left: 22%;
 }
 
 .acc {
@@ -102,7 +123,7 @@
 .done {
     height: 50px;
     border: none;
-    background: transparent linear-gradient(91deg, #A2C78D 0%, #88D162 16%, #68CE32 46%, #8DDC63 100%) 0% 0% no-repeat padding-box;
+    background: #359b50;
     border-radius: 99px;
     color: #ffffff;
     font-size: 20px;
@@ -116,7 +137,7 @@
 
 .infor {
     text-align: center;
-    margin-top: 65px;
+    margin-top: 30px;
 }
 
 .infor>p {
@@ -129,3 +150,12 @@
     margin-bottom: 0;
     font-size: 15px;
 }
+/* 
+.bg-signIn {
+    width: 80%;
+    height: 50px;
+    background: rgb(16, 151, 45);
+    position: absolute;
+    z-index: 0;
+    top: 115%;
+} */
