--- a/src/components/body/topic/topic.css
+++ b/src/components/body/topic/topic.css
@@ -113,7 +113,7 @@ html {
 .infor-user {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   padding-top: 10px;
 }
 
@@ -129,7 +129,7 @@ html {
   color: #bbb;
   font-size: 0.8rem;
   display: block;
-  margin-left: -16px;
+  margin-left: 0;
 }
 
 .rating-topic {
