--- a/src/components/login/SignIn.css
+++ b/src/components/login/SignIn.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 .SignIn {
     width: 100%;
     height: 100%;
@@ -30,6 +32,7 @@
 }
 
 .form-SignIn>h2 {
+    font-family: 'Lobster', cursive;
     color: #4faf57;
     font-size: 40px;
     font-weight: 700;
@@ -111,11 +114,21 @@
 }
 
 .social> svg {
-    color: #eeeeee;
-    font-size: 3rem;
-    padding: 8px 8px 8px 8px;
+    font-size: 2.5rem;
+    /* padding: 12px 12px 12px 12px; */
     border-radius: 99px;
-    background-color: rgb(58, 84, 153) ;
+}
+
+.fb > svg {
+    color: #101aa0;
+}
+
+.gg > svg {
+    color: #9e1818;
+}
+
+.tt > svg {
+    color: #21d8de;
 }
 
 .social:last-of-type> svg {
@@ -123,8 +136,9 @@
 }
 
 .social> svg:hover {
-    color: #ffffff;
-    background-color: rgb(23, 162, 242);
+    /* color: #ffffff;
+    background-color: rgb(23, 162, 242); */
+    transform: scale(1.2);
     transition: all 0.5s;
 }
 
