--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 .SignUp {
     width: 100%;
     height: 100%;
@@ -46,6 +48,7 @@
 }
 
 .form-SignUp>h2 {
+    font-family: 'Lobster', cursive;
     color: #4faf57;
     font-size: 40px;
     font-weight: 700;
@@ -94,6 +97,8 @@
     background-color: transparent;
     outline-width: 0;
     padding-left: 10px;
+    padding-right: 10px;
+    width: 85%;
 }
 
 ::placeholder {
