--- a/src/components/body/comment/style/comment.css
+++ b/src/components/body/comment/style/comment.css
@@ -1,3 +1,6 @@
+.float-left {
+  float: left;
+}
 .banner-comment {
   background-color: #1a262b;
   width: 100%;
@@ -11,10 +14,7 @@
 }
 
 .group-user-comment {
-  margin-top: 27px;
-  align-items: center;
   color: rgb(216, 216, 215);
-  flex: 1;
 }
 
 .group-user-comment:hover {
@@ -22,15 +22,13 @@
   color: #d4d4d4;
 }
 
-.group-user-comment > .MuiSvgIcon-root {
+.group-user-comment .MuiSvgIcon-root {
   width: 50px;
   height: 70px;
-  margin-left: 10px;
-  margin-right: 8px;
 }
 
 .infor-user-comment {
-  align-items: center;
+  padding-top: 5px;
 }
 
 .title-user-comment {
@@ -50,11 +48,7 @@
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 25px;
-  margin-right: 30px;
-  justify-content: flex-end;
-  text-align: right;
+
   cursor: pointer;
 }
 .group-like-comment > svg {
@@ -85,4 +79,12 @@
 }
 .item-content-comment .MuiButton-contained:hover {
   background-color: #fdd353;
+}
+.sub-header-comment {
+  align-items: center;
+  padding-top: 20px;
+}
+.group-btn-header-comment .MuiButton-outlinedPrimary,
+.MuiButton-outlinedSecondary {
+  opacity: 0.8;
 }
