update card university in homepage and ui comment page

--- a/src/components/body/home-page/home-page.css
+++ b/src/components/body/home-page/home-page.css
@@ -93,6 +93,16 @@
   font-size: 14px;
   color: #5e5e5e;
   margin-bottom: 5px;
+  /* white-space: nowrap; */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: height 1s;
+  height: 20px;
+}
+p.demo-content:hover {
+  height: 80px;
+  /* white-space: normal;
+  overflow: unset; */
 }
 .highlight-topic a.detail-card-home {
   display: inline-block;
