--- a/src/components/login/style/signin.css
+++ b/src/components/login/style/signin.css
@@ -1,11 +1,11 @@
 .SignIn {
-    width: 100%;
-    height: 100%;
-    background-image: url(/assets/signIn/bglogin.png) ;
-     background-size: 100% 100%;
-    background-repeat: no-repeat;
-    padding-top: 90px;
-    padding-bottom: 90px;
+  width: 100%;
+  height: 100%;
+  background-image: url(/assets/signIn/bglogin.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 /* .title-SignIn {
@@ -21,136 +21,135 @@
 } */
 
 .form-SignIn {
-    width: auto;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 10px 20px 10px;
-    border-radius: 10px;
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 10px 20px 10px;
+  border-radius: 10px;
 }
 
-.form-SignIn>h2 {
-    color: #4faf57;
-    font-size: 40px;
-    font-weight: 700;
-    text-align: center;
+.form-SignIn > h2 {
+  color: #4faf57;
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
 }
 
 .SignIn-input {
-    display: flex;
-    align-items: center;
-    background-color: #eff2f5;
-    padding: 8px 0px 8px 10px;
-    border-radius: 30px;
-    box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 1);
+  display: flex;
+  align-items: center;
+  background-color: #eff2f5;
+  padding: 8px 0px 8px 10px;
+  border-radius: 30px;
+  box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 1);
 }
 
-.SignIn-input>svg:first-child {
-    margin-left: 15px;
-    font-size: 1.8rem;
+.SignIn-input > svg:first-child {
+  margin-left: 15px;
+  font-size: 1.8rem;
 }
 
-.SignIn-input>input {
-    border: none;
-    background-color: transparent;
-    outline-width: 0;
-    padding-left: 10px;
+.SignIn-input > input {
+  border: none;
+  background-color: transparent;
+  outline-width: 0;
+  padding-left: 10px;
 }
 
 ::placeholder {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .hidden-pass {
-    text-align: right;
-    margin-left: 30%;
+  text-align: right;
+  margin-left: 30%;
 }
 
 .forgot {
-    text-align: right;
-    margin-top: 10px;
-    margin-bottom: 24px;
-    font-style: italic;
-    text-decoration: none;
-    color: #2c2d30;
-    font-weight: 500;
-    margin-right: 10px;
+  text-align: right;
+  margin-top: 10px;
+  margin-bottom: 24px;
+  font-style: italic;
+  text-decoration: none;
+  color: #2c2d30;
+  font-weight: 500;
+  margin-right: 10px;
 }
 
 .forgot:hover {
-    text-decoration: none;
-    color: #4421de;
+  text-decoration: none;
+  color: #4421de;
 }
 
 .infor-SignIn {
-    text-align: center;
-    margin-top: 30px;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  margin-top: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
-.infor-SignIn>p {
-    font-weight: 600;
-    font-size: 15px;
-    margin-bottom: 0;
-    margin-top: 0;
-    text-align: center;
+.infor-SignIn > p {
+  font-weight: 600;
+  font-size: 15px;
+  margin-bottom: 0;
+  margin-top: 0;
+  text-align: center;
 }
 
 .social-group {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    text-align: center;
-    margin-left: -20px;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  text-align: center;
+  margin-left: -20px;
 }
 
-.social-group>li {
-    list-style: none;
-    margin-right: 10px;
+.social-group > li {
+  list-style: none;
+  margin-right: 10px;
+}
+.social-group svg {
+  color: #eeeeee;
+  font-size: 2.5rem;
+  padding: 8px 8px 8px 8px;
+  border-radius: 99px;
+  background-color: rgb(58, 84, 153);
 }
 
-.social> svg {
-    color: #eeeeee;
-    font-size: 3rem;
-    padding: 8px 8px 8px 8px;
-    border-radius: 99px;
-    background-color: rgb(58, 84, 153) ;
+.social:last-of-type > svg {
+  /* background-color: rgb(23, 162, 242); */
 }
 
-.social:last-of-type> svg {
-    /* background-color: rgb(23, 162, 242); */
-}
-
-.social> svg:hover {
-    color: #ffffff;
-    background-color: rgb(23, 162, 242);
-    transition: all 0.5s;
+.social > svg:hover {
+  color: #ffffff;
+  background-color: rgb(23, 162, 242);
+  transition: all 0.5s;
 }
 
 /**---account----*/
 
 .account-signIn {
-    margin-top: 5px;
-    text-align: center;
+  margin-top: 5px;
+  text-align: center;
 }
 
 .q-account {
-    font-size: 15px;
-    font-weight: 550;
-    margin-bottom: 0;
-    opacity: .7;
+  font-size: 15px;
+  font-weight: 550;
+  margin-bottom: 0;
+  opacity: 0.7;
 }
 
 .signUp-acc {
-    margin-top: 0;
-    font-size: 16px;
-    font-weight: 500;
-    color: rgb(248, 248, 241);
+  margin-top: 0;
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(248, 248, 241);
 }
 
 .signUp-acc:hover {
-    text-decoration: none;
-    transition: 0.3s;
-    color: rgba(5, 25, 107, 0.774);
+  text-decoration: none;
+  transition: 0.3s;
+  color: rgba(5, 25, 107, 0.774);
 }
