--- a/src/components/body/topic/style/topic.css
+++ b/src/components/body/topic/style/topic.css
@@ -84,14 +84,13 @@ html {
   border-radius: 5px;
   background-color: #ffffff;
   align-items: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   height: auto;
   border: 1px solid green;
-  background: #f8fcf6;
 }
 
 .group-topic:hover {
-  background: #f3ffee;
+  background: #f7fff4;
   transition: all 0.3s;
 }
 
@@ -111,6 +110,7 @@ html {
   flex-direction: column;
   /* align-items: center; */
   padding-top: 10px;
+  margin-left: 50px
 }
 
 .title-user {
@@ -241,12 +241,13 @@ html {
 }
 .ava-user {
   float: left;
+  margin-top: 10px;
 }
-.ava-user > .MuiSvgIcon-root {
+.ava-user img {
   width: 50px;
   height: 70px;
-  margin-left: 10px;
-  margin-right: 8px;
+  /* margin-left: 10px; */
+
 }
 .wrap-topic-tag {
   text-align: right;
