--- a/src/components/body/home-page/home-page.css
+++ b/src/components/body/home-page/home-page.css
@@ -171,13 +171,14 @@ p.demo-content:hover {
 }
 
 .btn-loc {
-  margin-left: 20%;
-  width: 50%;
+  margin-left: 20% !important;
+  width: 60%;
   color: #5d963f;
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: 600 !important;
+  font-size: 18px !important;
 }
 .btn-loc:hover {
+  transition: all .8s ease-in-out;
   background-color: #5d963f;
   color: #ffffff;
 }
