--- a/src/components/login/style/signin.css
+++ b/src/components/login/style/signin.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
+
 .SignIn {
   width: 100%;
   height: 100%;
@@ -30,6 +32,7 @@
 }
 
 .form-SignIn > h2 {
+  font-family: 'Langar', cursive;
   color: #4faf57;
   font-size: 40px;
   font-weight: 700;
@@ -37,6 +40,7 @@
 }
 
 .SignIn-input {
+  width: 23vw;
   display: flex;
   align-items: center;
   background-color: #eff2f5;
