--- a/src/components/login/style/signup.css
+++ b/src/components/login/style/signup.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Langar&display=swap');
+
 .SignUp {
     width: 100%;
     height: 100%;
@@ -46,6 +48,7 @@
 }
 
 .form-SignUp>h2 {
+    font-family: 'Langar', cursive;
     color: #4faf57;
     font-size: 40px;
     font-weight: 700;
@@ -76,6 +79,7 @@
 }
 
 .SignUp-input {
+    width: 23vw;
     display: flex;
     align-items: center;
     background-color: #eff2f5;
