--- a/src/modules/pages/analysis/style/donut-chart.css
+++ b/src/modules/pages/analysis/style/donut-chart.css
@@ -1,29 +1,26 @@
 .container-donut-chart {
   margin-top: 10px;
-  text-align: center;
-  padding: 30px 5px;
+  padding: 30px 0px;
   margin-bottom: 50px;
 
-  /* border: 1px solid #e5e7eb;
+  border: 1px solid #e5e7eb;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff; */
+  background: #ffffff;
 }
 .container-donut-chart > h6 {
-  margin-bottom: 10px;
+  margin: 0px 15px 30px 15px;
 }
 .container-donut-chart .wrapper-donut-chart {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .wrapper-donut-chart > div {
-  /* margin: 0 50px; */
-
-  margin: 20px 20px;
+  /* margin: 20px 20px;
   padding: 30px;
   border-radius: 5px;
   border: 1px solid #e5e7eb;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #ffffff; */
 }
