--- a/src/modules/pages/analysis/style/main.css
+++ b/src/modules/pages/analysis/style/main.css
@@ -2,3 +2,9 @@
   /* background: linear-gradient(rgb(255, 255, 255), #cad1cb) */
   background: #f5f7fa;
 }
+.analysis h1 {
+  margin-top: 40px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 20px;
+}
