--- a/src/modules/pages/comment/style/animationBorder.scss
+++ b/src/modules/pages/comment/style/animationBorder.scss
@@ -22,7 +22,7 @@
 
   &::after {
     position: absolute;
-    content: "";
+    content: '';
     top: calc(-1 * var(--border-width));
     left: calc(-1 * var(--border-width));
     z-index: -1;
