--- a/src/modules/pages/comment/style/index.css
+++ b/src/modules/pages/comment/style/index.css
@@ -1,3 +1,4 @@
 /* @import 'animationBorder.scss'; */
 @import 'comment.css';
-@import 'PostComment.css';
+@import 'post-comment.css';
+@import 'content-comment.css';
