--- a/src/modules/pages/analysis/style/main.css
+++ b/src/modules/pages/analysis/style/main.css
@@ -1,10 +1,8 @@
 .analysis {
-  /* background: linear-gradient(rgb(255, 255, 255), #cad1cb) */
-  background: #f5f7fa;
+  padding: 30px 0;
 }
 .analysis h1 {
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 20px;
 }
