--- a/src/modules/pages/comment/style/comment.css
+++ b/src/modules/pages/comment/style/comment.css
@@ -67,7 +67,7 @@
   margin-top: 45px;
   margin-bottom: 20px;
   padding-bottom: 15px;
-  box-shadow: 0px 2px rgba(61, 61, 60, 0.5);
+  box-shadow: 0px 2px #8e8e8e;
 }
 
 .content-comment {
@@ -76,7 +76,7 @@
   font-size: 16px;
 }
 .body-comment {
-  margin-top: 50px;
+  padding: 50px 0;
 }
 .item-content-comment .MuiButton-contained {
   background-color: #ffc107;
