--- a/src/modules/pages/detail-university/style/author.css
+++ b/src/modules/pages/detail-university/style/author.css
@@ -4,7 +4,7 @@
 .dates-intro {
   opacity: 0.7;
   margin-left: 0px;
-  border-bottom: 1px solid rgba(1, 1, 1, 0.5);
+  border-bottom: 1px solid #8e8e8e;
   /* margin-top: -15px; */
 }
 .dates-intro p {
