--- a/src/modules/pages/detail-university/style/cooperation.css
+++ b/src/modules/pages/detail-university/style/cooperation.css
@@ -30,7 +30,7 @@
 }
 
 .th-cooperation {
-  border: 2px solid rgb(201, 199, 199);
+  border: 2px solid #8e8e8e;
   text-align: center;
   padding: 10px 15px 10px 15px;
   background: #013248;
@@ -48,8 +48,8 @@
 .td-coopreation {
   text-align: left;
   padding: 10px 15px 10px 15px;
-  border: 2px solid white;
-  background: #ececec;
+  border: 2px solid #8e8e8e;
+  /* background: #ececec; */
 }
 
 .td-coopreation:last-child {
