--- a/src/modules/pages/detail-university/style/major.css
+++ b/src/modules/pages/detail-university/style/major.css
@@ -14,6 +14,7 @@
 
 .th-major {
   text-align: center;
+  border: 2px solid #8e8e8e;
   padding: 10px 5px 10px 5px;
   background: #013248;
   color: #ffffff;
@@ -21,10 +22,9 @@
   position: sticky;
   top: 0;
 }
-
 .td-major {
-  background: #ececec;
-  border: 2px solid white;
+  /* background: #ececec; */
+  border: 2px solid #8e8e8e;
   padding: 5px 5px 5px 20px;
   font-size: 16px;
 }
