--- a/src/modules/pages/detail-university/style/nav.css
+++ b/src/modules/pages/detail-university/style/nav.css
@@ -1,7 +1,7 @@
 /* common css for all of page in detail-university */
 .wrap-detail-university {
-  background: linear-gradient(170deg, white 35%, rgba(0, 0, 0, 0) 0%),
-    linear-gradient(190deg, #f0ffe8 80%, #dcf3d1 0%);
+  /* background: linear-gradient(170deg, white 35%, rgba(0, 0, 0, 0) 0%),
+    linear-gradient(190deg, #f0ffe8 80%, #dcf3d1 0%); */
   min-height: 100px;
   padding-bottom: 100px;
 }
@@ -15,7 +15,7 @@ ul.nav-detail-university {
   list-style-type: none;
   height: 60px;
   padding-top: 20px;
-  padding-left: 170px;  
+  padding-left: 170px;
 }
 ul.nav-detail-university li {
   margin-right: 30px;
@@ -26,7 +26,6 @@ ul.nav-detail-university a {
   text-decoration: none;
 }
 ul.nav-detail-university a:focus {
-  
   font-weight: 500;
   border-bottom: 3px solid white;
 }
