--- a/src/modules/pages/user-editor/style.css
+++ b/src/modules/pages/user-editor/style.css
@@ -8,6 +8,9 @@
   border-radius: 3px;
   margin-bottom: 50px;
 }
+.form-user-editor > div {
+  margin-bottom: 10px;
+}
 .user-editor input,
 button {
   margin-top: 10px;
